--- a/release/train_tests/train_tests.yaml
+++ b/release/train_tests/train_tests.yaml
@@ -4,6 +4,8 @@
         compute_template: compute_tpl.yaml
 
     run:
+        use_connect: True
+        autosuspend_mins: 20
         timeout: 36000
         script: python workloads/train_tensorflow_linear_test.py
 
@@ -13,5 +15,7 @@
         compute_template: compute_tpl.yaml
 
     run:
+        use_connect: True
+        autosuspend_mins: 20
         timeout: 36000
         script: python workloads/train_torch_linear_test.py
