--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1418,14 +1418,12 @@ py_test(
     srcs = ["env/wrappers/tests/test_unity3d_env.py"]
 )
 
-# Taken out due to
-# AttributeError: module 'tensorflow.tools.docs.doc_controls' has no attribute 'inheritable_header
-#py_test(
-#    name = "env/wrappers/tests/test_recsim_wrapper",
-#    tags = ["team:ml", "env"],
-#    size = "small",
-#    srcs = ["env/wrappers/tests/test_recsim_wrapper.py"]
-#)
+py_test(
+    name = "env/wrappers/tests/test_recsim_wrapper",
+    tags = ["team:ml", "env"],
+    size = "small",
+    srcs = ["env/wrappers/tests/test_recsim_wrapper.py"]
+)
 
 py_test(
     name = "env/wrappers/tests/test_exception_wrapper",
