--- a/release/rllib_tests/rllib_tests.yaml
+++ b/release/rllib_tests/rllib_tests.yaml
@@ -73,7 +73,7 @@
 - name: connect_tests
   cluster:
     app_config: app_config.yaml
-    compute_template: 2gpus_32cpus.yaml
+    compute_template: auto_scale.yaml
 
   run:
     use_connect: True
