--- a/release/rllib_tests/app_config.yaml
+++ b/release/rllib_tests/app_config.yaml
@@ -16,7 +16,13 @@ post_build_cmds:
   - sudo ln -s /usr/local/cuda /usr/local/nvidia
   - sudo ln -s /usr/local/cuda/lib64/libcusolver.so.11 /usr/local/cuda/lib64/libcusolver.so.10
   - pip install tensorflow==2.5.0
-  # END: TO-DO
+  # END: TODO
+
+  # Upgrade to 1.9.0+cu111 to avoid a segfault error.
+  # TODO(jungong): also remove after product ray-ml docker gets upgraded.
+  - pip uninstall torch
+  - pip install torch==1.9.0+cu111
+  # END: TODO
 
   - pip uninstall -y ray || true
   - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
