--- a/release/rllib_tests/app_config.yaml
+++ b/release/rllib_tests/app_config.yaml
@@ -20,7 +20,7 @@ post_build_cmds:
 
   # Upgrade to 1.9.0+cu111 to avoid a segfault error.
   # TODO(jungong): also remove after product ray-ml docker gets upgraded.
-  - pip uninstall torch
+  - pip uninstall -y torch
   - pip install torch==1.9.0+cu111
   # END: TODO
 
