--- a/release/ray_lightning_tests/app_config.yaml
+++ b/release/ray_lightning_tests/app_config.yaml
@@ -1,5 +1,7 @@
 base_image: "anyscale/ray-ml:pinned-nightly-py37-gpu"
-env_vars: {}
+env_vars:
+  PL_TORCH_DISTRIBUTED_CONFIG: gloo
+
 debian_packages:
   - curl
 
