--- a/release/horovod_tests/horovod_tests.yaml
+++ b/release/horovod_tests/horovod_tests.yaml
@@ -1,6 +1,6 @@
 - name: horovod_test
   cluster:
-    app_config: app_config.yaml
+    app_config: app_config_master.yaml
     compute_template: compute_tpl.yaml
 
   run:
@@ -13,9 +13,20 @@
     run:
       timeout: 1800
 
-- name: horovod_user_test
+- name: horovod_user_test_latest
   cluster:
     app_config: app_config.yaml
+    compute_template: compute_tpl_autoscaling.yaml
+
+  run:
+    use_connect: True
+    autosuspend_mins: 10
+    timeout: 1200
+    script: python workloads/horovod_user_test.py
+
+- name: horovod_user_test_master
+  cluster:
+    app_config: app_config_master.yaml
     compute_template: compute_tpl_autoscaling.yaml
 
   run:
