--- a/release/ray_lightning_tests/app_config.yaml
+++ b/release/ray_lightning_tests/app_config.yaml
@@ -8,6 +8,8 @@ debian_packages:
 python:
   pip_packages:
     - tblib
+    - torch==1.9.0
+    - torchvision==0.10.0
     - git+https://github.com/ray-project/ray_lightning#ray_lightning
   conda_packages: []
 
