--- a/doc/requirements-doc.txt
+++ b/doc/requirements-doc.txt
@@ -31,9 +31,9 @@ starlette
 tabulate
 uvicorn
 werkzeug
-git+git://github.com/ray-project/tune-sklearn@master#tune-sklearn
-git+git://github.com/ray-project/xgboost_ray@master#egg=xgboost_ray
-git+git://github.com/ray-project/lightgbm_ray@main#lightgbm_ray
+git+https://github.com/ray-project/tune-sklearn@master#tune-sklearn
+git+https://github.com/ray-project/xgboost_ray@master#egg=xgboost_ray
+git+https://github.com/ray-project/lightgbm_ray@main#lightgbm_ray
 git+https://github.com/ray-project/ray_lightning#ray_lightning
 scikit-optimize
 sphinx-sitemap==2.2.0
