--- a/release/rllib_tests/app_config.yaml
+++ b/release/rllib_tests/app_config.yaml
@@ -7,7 +7,8 @@ debian_packages:
 python:
   # These dependencies should be handled by requirements_rllib.txt and
   # requirements_ml_docker.txt
-  pip_packages: []
+  pip_packages:
+    - torch==1.9.0 # TODO(amogkam): Remove after nightly images are available.
   conda_packages: []
 
 post_build_cmds:
@@ -16,12 +17,6 @@ post_build_cmds:
   - sudo ln -s /usr/local/cuda /usr/local/nvidia
   - sudo ln -s /usr/local/cuda/lib64/libcusolver.so.11 /usr/local/cuda/lib64/libcusolver.so.10
   - pip install tensorflow==2.5.0
-  # END: TODO
-
-  # Upgrade to 1.9.0+cu111 to avoid a segfault error.
-  # TODO(jungong): also remove after product ray-ml docker gets upgraded.
-  - pip uninstall -y torch
-  - pip install torch==1.9.0
   # END: TODO
 
   - pip uninstall -y ray || true
