--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -247,6 +247,8 @@
   commands:
     - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/travis/upload_build_info.sh; fi }; trap cleanup EXIT
     - RLLIB_TESTING=1 PYTHON=3.7 ./ci/travis/install-dependencies.sh
+    # Because Python version changed, we need to re-install Ray here
+    - rm -rf ./python/ray/thirdparty_files; rm -rf ./python/ray/pickle5_files; ./ci/travis/ci.sh build
     # - bazel test --config=ci $(./scripts/bazel_export_options)
     #   --build_tests_only
     #   --test_tag_filters=flaky
