--- a/release/xgboost_tests/app_config_gpu_master.yaml
+++ b/release/xgboost_tests/app_config_gpu_master.yaml
@@ -15,7 +15,8 @@ post_build_cmds:
   - sudo rm -rf /home/ray/anaconda3/lib/python3.7/site-packages/numpy || true
   - pip3 install numpy || true
   - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
-  - pip3 install -U "xgboost_ray" petastorm  # Install latest releases
+  - pip3 install -U petastorm  # Install latest release
+  - pip3 install -U "git+git://github.com/ray-project/xgboost_ray@master#egg=xgboost_ray"  # Install latest master
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
   - sudo mkdir -p /data || true
   - sudo chown ray:1000 /data || true
