--- a/release/xgboost_tests/app_config_gpu_master.yaml
+++ b/release/xgboost_tests/app_config_gpu_master.yaml
@@ -6,7 +6,7 @@ debian_packages:
 python:
   pip_packages:
     - pytest
-    - xgboost_ray
+    - git+https://github.com/ray-project/xgboost_ray@master#egg=xgboost_ray
     - petastorm
   conda_packages: []
 
@@ -16,7 +16,7 @@ post_build_cmds:
   - pip3 install numpy || true
   - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
   - pip3 install -U petastorm  # Install latest release
-  - pip3 install -U "git+git://github.com/ray-project/xgboost_ray@master#egg=xgboost_ray"  # Install latest master
+  - pip3 install -U "git+https://github.com/ray-project/xgboost_ray@master#egg=xgboost_ray"  # Install latest master
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
   - sudo mkdir -p /data || true
   - sudo chown ray:1000 /data || true
