[serve] split ReplicaStartupState.PENDING into PENDING_ALLOCATION and PENDING_INITIALIZATION (#19431)

--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -231,6 +231,15 @@ py_test(
 )
 
 py_test(
+    name = "test_warnings",
+    size = "small",
+    srcs = serve_tests_srcs,
+    tags = ["exclusive", "team:serve"],
+    deps = [":serve_lib"],
+)
+
+
+py_test(
     name = "test_fastapi",
     size = "medium",
     srcs = serve_tests_srcs,
