--- a/release/long_running_tests/app_config.yaml
+++ b/release/long_running_tests/app_config.yaml
@@ -1,4 +1,4 @@
-base_image: "anyscale/ray-ml:pinned-nightly-py37"
+base_image: "anyscale/ray-ml:nightly-py37"
 env_vars: {}
 debian_packages:
   - curl
@@ -6,13 +6,11 @@ debian_packages:
 
 python:
   pip_packages:
+    - gym[atari]
   conda_packages: []
 
 post_build_cmds:
   - 'rm -r wrk || true && git clone https://github.com/wg/wrk.git /tmp/wrk && cd /tmp/wrk && make -j && sudo cp wrk /usr/local/bin'
-  - pip uninstall -y numpy ray || true
-  - sudo rm -rf /home/ray/anaconda3/lib/python3.7/site-packages/numpy
-  - pip3 install numpy || true
-  - pip3 install -U ray[all] gym[atari]
   - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
+  - pip3 install ray[all]
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
