--- a/release/nightly_tests/placement_group_tests/app_config_grpc.yaml
+++ b/release/nightly_tests/placement_group_tests/app_config_grpc.yaml
@@ -1,4 +1,4 @@
-base_image: "anyscale/ray-ml:pinned-nightly-py37"
+base_image: "anyscale/ray-ml:nightly-py37"
 env_vars: {"RAY_grpc_based_resource_broadcast": "true", "RAY_event_log_reporter_enabled": "true"}
 debian_packages: []
 
