--- a/release/nightly_tests/many_nodes_tests/app_config_grpc.yaml
+++ b/release/nightly_tests/many_nodes_tests/app_config_grpc.yaml
@@ -1,4 +1,4 @@
-base_image: "anyscale/ray-ml:nightly-py37"
+base_image: "anyscale/ray:nightly-py37"
 env_vars: {"RAY_gcs_server_rpc_server_thread_num": "8", "RAY_GCS_ACTOR_SCHEDULING_ENABLED": "true", "RAY_grpc_based_resource_broadcast": "true"}
 debian_packages: []
 
