--- a/release/nightly_tests/stress_tests/stress_tests_app_config_grpc.yaml
+++ b/release/nightly_tests/stress_tests/stress_tests_app_config_grpc.yaml
@@ -1,4 +1,4 @@
-base_image: "anyscale/ray-ml:nightly-py37"
+base_image: "anyscale/ray:nightly-py37"
 env_vars: {"RAY_grpc_based_resource_broadcast": "true"}
 debian_packages: []
 
