--- a/rllib/tuned_examples/ppo/cartpole-appo-vtrace.yaml
+++ b/rllib/tuned_examples/ppo/cartpole-appo-vtrace.yaml
@@ -14,6 +14,7 @@ cartpole-appo-vtrace:
         num_sgd_iter: 6
         vf_loss_coeff: 0.01
         vtrace: true
+        vtrace_drop_last_ts: false
         model:
             fcnet_hiddens: [32]
             fcnet_activation: linear
