--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -27,7 +27,8 @@ requests
 ## setup.py extras
 dm_tree
 flask
-gym==0.19
+gym>=0.21.0; python_version >= '3.7'
+gym==0.19.0; python_version < '3.7'
 lz4
 scikit-image
 opencv-python-headless==4.3.0.36
