--- a/python/requirements/ml/requirements_tune.txt
+++ b/python/requirements/ml/requirements_tune.txt
@@ -10,7 +10,9 @@ flaml==0.6.7
 freezegun==1.1.0
 gluoncv==0.10.1.post0
 gpy==1.10.0
-gym[atari]==0.18.3
+autorom[accept-rom-license]
+gym[atari]>=0.21.0; python_version >= '3.7'
+gym[atari]==0.19.0; python_version < '3.7'
 h5py==3.1.0
 hpbandster==0.7.4
 pymoo<0.5.0  # this is a HEBO dependency, remove after https://github.com/huawei-noah/noah-research/issues/41 is fixed
