--- a/.buildkite/pipeline.macos.yml
+++ b/.buildkite/pipeline.macos.yml
@@ -59,13 +59,17 @@ steps:
     - if [ "$BUILDKITE_BRANCH" = "master" ]; then python .buildkite/copy_files.py --destination jars --path ./.jar/darwin; fi
 
 
-- label: ":mac: :apple: Ray C++ and Libraries"
+- label: ":mac: :apple: Ray C++, Java and Libraries"
   <<: *common
   commands:
+    - export RAY_INSTALL_JAVA=1
     - *prelude_commands
     - TORCH_VERSION=1.6 ./ci/travis/install-dependencies.sh
     - bazel test --config=ci --test_env=CI $(./scripts/bazel_export_options) --build_tests_only --test_tag_filters=-flaky,-flaky-mac,-post_wheel_build --
       //:all python/ray/serve/... python/ray/dashboard/... -rllib/... -core_worker_test
+    # clang-format is needed by java/test.sh
+    - pip install clang-format==12.0.1
+    - ./java/test.sh
     - *epilogue_commands
 
 - label: ":mac: :apple: Worker"
