basic publisher and subscriber

--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -28,6 +28,7 @@ py_test_module_list(
     "test_component_failures_2.py",
     "test_component_failures_3.py",
     "test_error_ray_not_initialized.py",
+    "test_gcs_utils.py",
     "test_global_gc.py",
     "test_grpc_client_credentials.py",
     "test_iter.py",
